--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
     justify-content: space-between;
 }
 
-.header div div{
+.header-font{
     font-size: 24px;
     color: #f9faf8;
     font-weight: bold;
@@ -75,7 +75,7 @@ button {
     background-color: gray;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items:center;
     color: white;
 }
 
@@ -92,21 +92,90 @@ button {
     justify-content: center;
     flex-wrap: wrap;
     gap: 50px;
+    padding-bottom: 113px;
 }
 
 .second-two div {
-    border: 2px solid red;
+    
     flex-basis: 160px;
     flex-shrink: 0;
 }
 
 .second-two .second-text{
     color: #1f2937;
+    text-align: center;
+    font-size: 17px;
 }
 
 .box-image {
     height: 160px;
     width: 160px;
+    border: 4px solid #3882f6;
+    border-radius: 16px;
+    margin-bottom: 5px;
+}
+
+.third {
+    background-color: #e5e7eb;
+    display: flex;
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+    padding: 123px 0 91px;
+    justify-content: center;
+    
+     
+}
+
+.third div {
+    flex: 0 1 54%;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+    text-align: end;
+    font-weight: bolder;
+    font-size: 26px;
+    font-style: normal;
+}
+
+.fourth {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 340px;
+}
+
+.fourth-child {
+    background-color: #3882f6;
+    border-radius: 8px;
+    flex-basis: 73%;
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+.fourth-child-son {
+    flex-basis: 74%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.button {
+    border: 2px solid white;
+    flex: 0 0 auto;
+}
+
+.footer {
+    background-color: #1f2937;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    padding: 40px;
 }
 
 ul {
